--- a/giaodien.html
+++ b/giaodien.html
@@ -13,7 +13,7 @@
 
         #header {
             background-color: aqua;
-            height: 100px;
+            height: 60px;
             text-align: center;
         }
 
@@ -45,6 +45,15 @@
             margin-left: 15%;
             clear: left;
         }
+
+        .nghigi {
+            background-color: brown;
+            height: 100px;
+        }
+        .center1 {
+            height: 550px;
+            background-color: darkseagreen;
+        }
     </style>
 </head>
 <body>
@@ -52,11 +61,14 @@
 
     <div id="bentrai">User</div>
 
-    <div id="center">Anh</div>
+    <div id="center">
+        <div class="nghigi">Bạn đang nghĩ gì?</div>
+        <div class="center1">Picture</div>
+        Like share cmt
+    </div>
 
 
     <div id="right">Page</div>
 
-    <div id="trongcenter">Like share cmt</div>
 </body>
 </html>
